# AkuPDF

./: FEATURES.md  LICENSE  NOTICE  README.md  justfile  pyproject.toml
docs/: FEATURES.md
licenses/: BSD-2-Clause-qt-material.txt  MIT-QDarkStyle.txt
src/: app.py
src/modules/: compress.py  encrypt.py  image_extractor.py  merge.py  pdf_to_docx.py  pdf_to_images.py  pdf_to_xlsx.py  pdf_utils.py  split.py  text_extractor.py  watermark.py
src/ui/: add_password_view.py  compress_view.py  encrypt_view.py  extract_pages_view.py  extract_view.py  home_view.py  image_extract_view.py  main_window.py  merge_view.py  pdf_to_docx_view.py  pdf_to_images_view.py  pdf_to_xlsx_view.py  remove_password_view.py  split_view.py  text_extract_view.py  theme.py  watermark_view.py
src/ui/widgets/: card.py  drop_zone.py  flow_layout.py  header.py
tests/integration/: test_password_workflow.py
tests/modules/: test_compress.py  test_encrypt.py  test_image_extractor.py  test_merge.py  test_pdf_to_docx.py  test_pdf_to_docx_enhanced.py  test_pdf_to_images.py  test_pdf_to_xlsx.py  test_pdf_utils.py  test_split.py  test_text_extractor.py  test_watermark.py
tests/ui/: test_add_password_view.py  test_card_widget.py  test_compress_view.py  test_extract_pages_view.py  test_extract_view.py  test_home_view.py  test_image_extract_view.py  test_main_window.py  test_merge_view.py  test_remove_password_view.py  test_split_view.py  test_text_extract_view.py
