[project]
name = "akupdf"
version = "0.1.0"
description = ""
authors = [{name = "Aku"}]
license = {text = "Apache-2.0 license"}
readme = "README.md"
requires-python = "==3.13.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
prod = [
    "PySide6==6.9.2"
]
dev = [
    "pytest==8.4.2"
]
