[project]
name = "akupdf"
version = "0.1.0"
description = ""
authors = [{name = "Aku"}]
license = {text = "Apache-2.0 license"}
readme = "README.md"
requires-python = "==3.13.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
prod = [
    "PySide6==6.9.3",
    "pypdf==6.1.1",
#    "QDarkStyle==3.2.3",
#    "qt-material==2.17",
    "pdfplumber==0.11.7",
    "pikepdf==9.11.0",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
    "Pillow==11.3.0"
]
dev = [
    "pytest==8.4.2",
    "pytest-qt==4.5.0",
    "ruff==0.13.3",
    "ty==0.0.1a21"
]
#build = [
#    "pyinstaller==6.16.0"
# pyinstaller --onedir --name MyApp main.py
#]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
lint.select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

